--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "jeroennoten/laravel-adminlte": "^3.15",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "openai-php/client": "^0.17",
+        "openai-php/laravel": "^0.17.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
